--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0"
   },
   "dependencies": {
     "chalk": "^3.0.0",
