--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "bin": {
-    "chaussette": "./index.js"
+    "chaussette": "bin/chaussette.js"
   },
   "devDependencies": {
     "husky": "^3.1.0",
