--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chaussette",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A nodejs proxy to connect to TCP servers using browser's WebSocket API.",
   "main": "index.js",
   "repository": "https://github.com/mdubourg001/chaussette.git",
@@ -8,11 +8,19 @@
   "license": "MIT",
   "private": false,
   "bin": {
-    "chaussette": "bin/chaussette.js"
+    "chaussette": "bin/cli.js"
+  },
+  "scripts": {
+    "build-cli": "parcel build cli.js --no-minify --target node --out-dir bin && chmod +x bin/cli.js",
+    "add-hashbang": "echo \"#!/usr/bin/env node\n$(cat bin/cli.js)\" > bin/cli.js",
+    "build": "yarn build-cli && yarn add-hashbang",
+    "clean": "rm -rf bin .cache",
+    "prepublish": "yarn build"
   },
   "devDependencies": {
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "parcel": "^1.12.4",
     "prettier": "^1.19.1"
   },
   "dependencies": {
